--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -254,11 +254,11 @@
 		</div>
 	</div>
 
-	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">
-		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">
-			Instalar aplicativo
-		</span>
-	</div>
+<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">-->
+<!--		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">-->
+<!--			Instalar aplicativo-->
+<!--		</span>-->
+<!--	</div>-->
 
 </section>
 
