--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -32,14 +32,14 @@
 						<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>" alt="<%= @event.name %>" class="object-cover object-center absolute top-0 left-0 w-full min-w-full h-full border-b" style="background-color: <%= helpers.get_image_dominant_color(@event) %>">
 					</div>
 					<div class="flex relative z-20 flex-wrap items-center py-2 px-3 -mt-6">
-						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="text-xs c-chip shadow group hover:shadow-md">
+						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="text-xs c-chip mr-3 mb-3 shadow group hover:shadow-md">
 							<div class="font-semibold">Site oficial</div>
 							<svg class="ml-2 h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
 							</svg>
 						</a>
 						<% if @event.ticket_url %>
-							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="text-xs c-chip shadow group hover:shadow-md">
+							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="text-xs c-chip mr-3 mb-3 shadow group hover:shadow-md">
 								<div class="font-semibold">Ingressos</div>
 								<svg class="ml-2 h-5 text-gray-700 stroke-current group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
