--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -1,54 +1,56 @@
-<div id="<%= @id %>" data-turbo-permanent class="max-w-screen-lg mx-auto" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
+<div id="<%= @id %>" data-turbo-permanent class="mx-auto max-w-screen-lg" data-controller="persist-horizontal-scroll slider" data-model="movie" data-slider-distance-value="400" data-persist-horizontal-scroll-value="0">
 	<% if @title %>
 		<h2 class="px-5 c-h2">
 			<%= @title %>
 		</h2>
 	<% end %>
-	<div class="relative md:px-5 mt-3">
+	<div class="relative mt-3 md:px-5">
 		<% if @chips %>
-			<div class="flex md:flex-wrap md:px-0 md:mb-2 px-5 scrollx">
-				<div class="c-chip--active cursor-default">
-					Todos os filmes
-				</div>
-				<% if @user&.following_cinemas&.any? %>
-					<% @user.following_cinemas.each do |cinema| %>
-						<%= link_to cinema_path cinema, 'data-turbo-preserve-scroll': true do %>
-							<div class="c-chip" title="<%= cinema.display_name %>">
-								<%= helpers.limit_name_size cinema.display_name, 24 %>
+			<div class="scrollx">
+				<div class="flex px-5 w-content md:flex-wrap md:px-0 md:mb-2">
+					<div class="cursor-default c-chip--active mr-3 mb-3">
+						Todos os filmes
+					</div>
+					<% if @user&.following_cinemas&.any? %>
+						<% @user.following_cinemas.each do |cinema| %>
+							<%= link_to cinema_path(cinema), 'data-turbo-preserve-scroll': true do %>
+								<div class="c-chip mr-3 mb-3" title="<%= cinema.display_name %>">
+									<%= helpers.limit_name_size cinema.display_name, 24 %>
+								</div>
+							<% end %>
+						<% end %>
+					<% else %>
+						<%= link_to cinemas_path do %>
+							<div class="c-chip mr-3 mb-3" title="Siga cinemas para vê-los aqui">
+								Ver cinemas
+								<svg xmlns="http://www.w3.org/2000/svg" class="ml-2 w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+									<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
+								</svg>
 							</div>
 						<% end %>
 					<% end %>
-				<% else %>
-					<%= link_to cinemas_path do %>
-						<div class="c-chip" title="Siga cinemas para vê-los aqui">
-							Ver cinemas
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
-								<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
-							</svg>
-						</div>
-					<% end %>
-				<% end %>
+				</div>
 			</div>
 		<% end %>
 		<div class="relative px-1">
 			<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex bg-x-white-to-transparent">
-				<div data-slider-target="left" data-action="click->slider#left" class="hidden -ml-4 bg-brand-200 cursor-pointer duration-200 hover:bg-brand-600 hover:text-white mt-20 my-auto rounded-full shadow-md text-brand-700 transition-colors">
+				<div data-slider-target="left" data-action="click->slider#left" class="hidden my-auto mt-20 -ml-4 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700">
 					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
-						<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+						<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"/>
 					</svg>
 				</div>
 			</div>
 			<div class="hidden absolute top-0 right-0 z-20 items-center w-3 h-full select-none md:flex bg-x-transparent-to-white">
-				<div data-slider-target="right" data-action="click->slider#right" class="-ml-3 bg-brand-200 cursor-pointer duration-200 hover:bg-brand-600 hover:text-white mt-20 my-auto rounded-full shadow-md text-brand-700 transition-colors">
+				<div data-slider-target="right" data-action="click->slider#right" class="my-auto mt-20 -ml-3 rounded-full shadow-md transition-colors duration-200 cursor-pointer bg-brand-200 hover:bg-brand-600 hover:text-white text-brand-700">
 					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
-						<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+						<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
 					</svg>
 				</div>
 			</div>
 			<div data-slider-target="scroller"
 					 data-persist-horizontal-scroll-target="scroller"
-					 class="md:border md:px-3 md:py-3 py-2 rounded-lg scrollx">
-				<div class="px-5 md:px-0 grid grid-flow-col gap-2 w-content grid-after-margin">
+					 class="py-2 rounded-lg md:border md:px-3 md:py-3 scrollx">
+				<div class="grid grid-flow-col gap-2 px-5 md:px-0 w-content grid-after-margin">
 					<% @movies.each do |movie| %>
 						<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
 							<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
@@ -61,7 +63,7 @@
 									onerror: "this.style.opacity='0'"
 								} rescue nil %>
 								<%= tag.div helpers.limit_name_size(movie.title, 24), class: 'leading-tight mt-2 inline-block text-xs text-center font-semibold text-gray-900' %>
-								<div class="mt-1 leading-tight text-center text-xxs text-gray-700"><%= movie.genres&.join(", ") %></div>
+								<div class="mt-1 leading-tight text-center text-gray-700 text-xxs"><%= movie.genres&.join(", ") %></div>
 							<% end %>
 						</div>
 					<% end %>
