--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -28,16 +28,16 @@
 				</div>
 			</div>
 		<% end %>
-		<% unless filters_present? %>
-			<a href="<%= root_path theme: 'entretenimento-lazer' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': !params[:theme] || params[:theme] == 'entretenimento-lazer',
-																																																																							 'c-chip':         params[:theme] && params[:theme] != 'entretenimento-lazer' }) %>">
+		<% if @filters[:theme].present? && !categories_or_date_presents? %>
+			<div data-reflex="click->Filter#filter" data-filter-theme="entretenimento-lazer" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': !@filters[:theme] || @filters[:theme] == 'entretenimento-lazer',
+																																																																																			 'c-chip':         @filters[:theme] && @filters[:theme] != 'entretenimento-lazer' }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="mr-2 w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"/>
 				</svg>
 				Entretenimento
-			</a>
-			<a href="<%= root_path theme: 'trabalho-educacao' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': params[:theme] == 'trabalho-educacao',
-																																																																						'c-chip':         params[:theme] != 'trabalho-educacao' }) %>">
+			</div>
+			<div data-reflex="click->Filter#filter" data-filter-theme="trabalho-educacao" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': @filters[:theme] == 'trabalho-educacao',
+																																																																																		'c-chip':         @filters[:theme] != 'trabalho-educacao' }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
 				</svg>
@@ -45,11 +45,11 @@
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
 				</svg>
 				Trabalho & Educação
-			</a>
+			</div>
 		<% end %>
 		<div data-reflex="click->Filter#open" class="<%= helpers.class_names('items-center cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
-																																				 { 'bg-brand-200 text-brand-600': filters_present?,
-																																					 'bg-gray-100 text-gray-600':   !filters_present? }) %>">
+																																				 { 'bg-brand-200 text-brand-600': categories_or_date_presents?,
+																																					 'bg-gray-100 text-gray-600':   !categories_or_date_presents? }) %>">
 			<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"/>
 			</svg>
@@ -101,7 +101,7 @@
 							</svg>
 							<%= @filters[:date] ? @filters[:date]&.to_date&.strftime("%d/%m/%y") : 'Data' %>
 						</div>
-						<% if filters_present? %>
+						<% if categories_or_date_presents? %>
 							<div data-reflex="click->Filter#clear_filter"
 									 data-filter-group="category"
 									 class="inline-block flex justify-start items-center py-2 pr-4 pl-4 mr-2 mb-2 font-semibold text-gray-700 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none duration-50 hover:bg-red-200 hover:text-red-700 tap-highlight-none w-content">
