Create active scope for screening and refactor calendar attribute name

--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -26,7 +26,7 @@
 						<path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm3 2h6v4H7V5zm8 8v2h1v-2h-1zm-2-2H7v4h6v-4zm2 0h1V9h-1v2zm1-4V5h-1v2h1zM5 5v2H4V5h1zm0 4H4v2h1V9zm-1 4h1v2H4v-2z" clip-rule="evenodd"/>
 					</svg>
 					·
-					<%= helpers.day_of_week(@likeable.start_time).titlecase %> às <%= helpers.format_hour @likeable.start_time %>h
+					<%= helpers.day_of_week(@likeable.start_time).titlecase %> · <%= @likeable&.cinema&.display_name %>
 				<% end %>
 				<%= link_to helpers.limit_place_name_size(@likeable.place_details_name, 24), place_path(@likeable.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:underline' if @likeable.class == Event %>
 			</div>
@@ -70,7 +70,7 @@
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
-		<% else %>
+			<% else %>
 				<%= link_to movie_path(@likeable&.movie), data: { 'turbo-preserve-scroll': true } do %>
 					<%= image_tag helpers.shrine_image_url(@likeable, :small), {
 						loading: :lazy,
@@ -82,7 +82,7 @@
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
-		<% end %>
+			<% end %>
 		</div>
 	</div>
 <% end %>
