--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -15,12 +15,13 @@
 			<div class="text-xs">
 				<% if @likeable.class == Event %>
 					<%= helpers.format_hour(@likeable.start_time) %>h
+					· <%= helpers.day_of_week @likeable.start_time %>
 				<% else %>
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 inline" viewBox="0 0 20 20" fill="currentColor">
 						<path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm3 2h6v4H7V5zm8 8v2h1v-2h-1zm-2-2H7v4h6v-4zm2 0h1V9h-1v2zm1-4V5h-1v2h1zM5 5v2H4V5h1zm0 4H4v2h1V9zm-1 4h1v2H4v-2z" clip-rule="evenodd"/>
 					</svg>
+					· <%= helpers.day_of_week @likeable.start_time %> · <%= @likeable&.cinema&.display_name %>
 				<% end %>
-				· <%= helpers.day_of_week @likeable.start_time %>
 			</div>
 			<div class="mb-1 leading-snug">
 				<% if @likeable.class == Event %>
