--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -46,7 +46,7 @@
 								</svg>
 							</a>
 						<% end %>
-						<div class="text-xs c-chip shadow group hover:shadow-md"
+						<div class="text-xs c-chip shadow group hover:shadow-md mr-3 mb-3"
 								 data-controller="share-button"
 								 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
 								 data-share-button-title="<%= @event.name %>"
