--- a/web/app/views/cinemas/show.html.erb
+++ b/web/app/views/cinemas/show.html.erb
@@ -56,7 +56,7 @@
 		</div>
 	</div>
 	<div class="grid grid-cols-1 grid-flow-row gap-5 md:grid-cols-1">
-		<% @cinema.movies.where("movies.created_at >= ?", DateTime.now - 30.days).order("created_at DESC").each do |movie| %>
+		<% @cinema.movies.includes(:screenings).where("movies.created_at >= ?", DateTime.now - 30.days).order("created_at DESC").each do |movie| %>
 			<div class="border rounded-lg p-5">
 				<div class="flex flex-col md:flex-row md:mx-auto">
 					<%= image_tag shrine_image_url(movie, :medium), {
