--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -84,7 +84,7 @@
 					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
 				</div>
 				<div
-					class="flex hidden overscroll-contain left-0 justify-center items-center mt-10 w-96 text-2xl text-gray-800 rounded-xl border shadow-lg font-display h-screen-8/10"
+					class="bg-gray-50 flex hidden overscroll-contain left-0 justify-center items-center mt-10 w-96 text-2xl text-gray-800 rounded-xl border font-display h-screen-8/10"
 					data-loader-target="loading"
 					style="">
 					Carregando
@@ -94,7 +94,7 @@
 					</svg>
 				</div>
 			</div>
-			<%= render LeftSidebar::CalendarComponent.new(events:     @liked_events,
+			<%= render LeftSidebar::CalendarComponent.new(resources:  @liked_resources,
 																										start_date: Date.today,
 																										user:       current_user,
 																										filter:     false,
@@ -103,11 +103,11 @@
 	<% end %>
 
 
-<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">-->
-<!--		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">-->
-<!--			Instalar aplicativo-->
-<!--		</span>-->
-<!--	</div>-->
+	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">-->
+	<!--		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">-->
+	<!--			Instalar aplicativo-->
+	<!--		</span>-->
+	<!--	</div>-->
 
 </div>
 
