--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -4,7 +4,7 @@
 			 data-event-identifier="<%= @event.id %>"
 			 data-event-description-open="false"
 			 data-event-modifier="single">
-		<div class="flex px-5">
+		<div class="flex justify-between px-5 mb-2">
 			<div class="pr-3">
 				<span class="text-sm font-light text-gray-400">
 					<% if helpers.already_happened? @event %>
@@ -13,7 +13,7 @@
 						Atualizado há <%= time_ago_in_words @event&.updated_at %>
 					<% end %>
 				</span>
-				<h1 class="mb-2 c-h2 leading-tight">
+				<h1 class="mb-2 leading-tight c-h2">
 					<%= helpers.limit_name_size @event.name %>
 				</h1>
 			</div>
@@ -92,7 +92,7 @@
 					<div class="text-sm"><%= helpers.format_hour @event.start_time %></div>
 				</div>
 
-				<div class="leading-snug md:text-base my-auto text-gray-700 text-sm">
+				<div class="my-auto text-sm leading-snug text-gray-700 md:text-base">
 					O evento acontecerá <%= I18n.l(@event.start_time) %>.
 					Daqui <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now %>.
 				</div>
@@ -101,7 +101,7 @@
 		<div class="flex flex-col py-5 px-5 border-b border-gray-100 md:flex-row">
 			<div class="flex-grow">
 				<%= link_to place_path(@event&.place), class: 'inline items-center space-x-2', data: { 'turbo-preserve-scroll': true } do %>
-					<h2 class="c-h3 inline">
+					<h2 class="inline c-h3">
 						<%= helpers.limit_place_name_size(@event.place_details_name, 40) %>
 					</h2>
 				<% end %>
@@ -115,8 +115,8 @@
 					<%= helpers.limit_address_name_size @event.geographic['address'] %>
 				</div>
 			</div>
-			<div class="flex justify-center h-12 align-middle bg-cover group" style="">
-				<%= link_to helpers.google_maps_url(@event.geographic['address']), class: 'border flex group-hover:bg-brand-100 group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 my-auto px-2 py-2 rounded text-gray-700 text-xs w-full' do %>
+			<div class="flex h-12 align-middle bg-cover group" style="">
+				<%= link_to helpers.google_maps_url(@event.geographic['address']), class: 'border flex group-hover:bg-brand-100 group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 my-auto px-2 py-2 rounded text-gray-700 text-xs' do %>
 					<svg class="mr-1 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
