--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -13,13 +13,13 @@
 				</svg>
 			</div>
 			<div class="mr-2 flex">
-				<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-500 md:hover:text-white mx-1 rounded-full w-8' do %>
+				<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
 					<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
 					</svg>
 				<% end if start_date&.month > DateTime.now.month %>
-				<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-500 md:hover:text-white mx-1 rounded-full w-8' do %>
+				<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
 					<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
@@ -43,8 +43,7 @@
 						<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
 							<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
 																															 { 'mt-1':                                               @indicators&.include?(day),
-																																 'today flex items-center justify-center flex-col':    Date.current == day,
-																																 'selected flex items-center justify-center flex-col': day.to_date == start_date.to_date && @filter }) do %>
+																																 'selected flex items-center justify-center flex-col': Date.current == day && !@filter || (day.to_date == start_date.to_date && @filter) }) do %>
 								<div class="z-20">
 									<%= day.strftime '%e' %>
 								</div>
