--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -31,19 +31,19 @@
 		<% if @filters[:theme].present? && !categories_or_date_presents? %>
 			<div data-reflex="click->Filter#filter" data-filter-theme="entretenimento-lazer" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': !@filters[:theme] || @filters[:theme] == 'entretenimento-lazer',
 																																																																																			 'c-chip':         @filters[:theme] && @filters[:theme] != 'entretenimento-lazer' }) %>">
-				<svg xmlns="http://www.w3.org/2000/svg" class="mr-2 w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<svg xmlns="http://www.w3.org/2000/svg" class="mr-1.5 md:mr-2 w-4 md:w-5 md:h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"/>
 				</svg>
 				Entretenimento
 			</div>
 			<div data-reflex="click->Filter#filter" data-filter-theme="trabalho-educacao" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('mr-3 mb-3', { 'c-chip--active': @filters[:theme] == 'trabalho-educacao',
 																																																																																		'c-chip':         @filters[:theme] != 'trabalho-educacao' }) %>">
-				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<svg xmlns="http://www.w3.org/2000/svg" class="mr-1.5 md:mr-2 w-4 md:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
 				</svg>
-				<svg xmlns="http://www.w3.org/2000/svg" class="mr-2 w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
-				</svg>
+<!--				<svg xmlns="http://www.w3.org/2000/svg" class="mr-1.5 md:mr-2 w-4 md:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">-->
+<!--					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>-->
+<!--				</svg>-->
 				Trabalho & Educação
 			</div>
 		<% end %>
