--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -8,7 +8,7 @@
 		<% if @chips %>
 			<div class="scrollx">
 				<div class="flex px-5 w-content md:flex-wrap md:px-0 md:mb-2">
-					<div class="cursor-default c-chip--active mr-3 mb-3">
+					<div class="text-sm md:text-base cursor-default c-chip--active mr-3 mb-3">
 						Todos os filmes
 					</div>
 					<% if @user&.following_cinemas&.any? %>
@@ -21,9 +21,9 @@
 						<% end %>
 					<% else %>
 						<%= link_to cinemas_path do %>
-							<div class="c-chip mr-3 mb-3" title="Siga cinemas para vê-los aqui">
+							<div class="text-sm md:text-base c-chip mr-3 mb-3" title="Siga cinemas para vê-los aqui">
 								Ver cinemas
-								<svg xmlns="http://www.w3.org/2000/svg" class="ml-2 w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+								<svg xmlns="http://www.w3.org/2000/svg" class="ml-2 w-4 md:w-5" viewBox="0 0 20 20" fill="currentColor">
 									<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
 								</svg>
 							</div>
@@ -50,7 +50,7 @@
 			<div data-slider-target="scroller"
 					 data-persist-horizontal-scroll-target="scroller"
 					 class="py-2 rounded-lg md:border md:px-3 md:py-3 scrollx">
-				<div class="grid grid-flow-col gap-2 px-5 md:px-0 w-content grid-after-margin">
+				<div class="grid grid-flow-col gap-2.5 px-5 md:px-0 w-content grid-after-margin">
 					<% @movies.each do |movie| %>
 						<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
 							<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
@@ -58,12 +58,12 @@
 									loading: :lazy,
 									title:   movie.title,
 									alt:     "Filme #{movie.title}",
-									class:   'border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded',
+									class:   'border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded-md',
 									style:   'min-height: 145px',
 									onerror: "this.style.opacity='0'"
 								} rescue nil %>
-								<%= tag.div helpers.limit_name_size(movie.title, 24), class: 'leading-tight mt-2 inline-block text-xs text-center font-semibold text-gray-900' %>
-								<div class="mt-1 leading-tight text-center text-gray-700 text-xxs"><%= movie.genres&.join(", ") %></div>
+								<%= tag.div helpers.limit_name_size(movie.title, 30), class: 'text-xs font-medium inline-block leading-tight mt-2 pl-0.5 text-gray-900' %>
+								<div class="mt-1 leading-tight text-gray-700 text-xxs"><%= movie.genres&.join(", ") %></div>
 							<% end %>
 						</div>
 					<% end %>
