--- a/web/app/views/cinemas/index.html.erb
+++ b/web/app/views/cinemas/index.html.erb
@@ -4,7 +4,7 @@
 <%= render(ModalComponent.new) %>
 
 <%# cache [current_user, 'cinemas', @cinemas&.map(&:id), @cinemas&.max&.updated_at&.to_i] do %>
-<section class="mx-auto mt-12 max-w-screen-lg min-h-screen px-5 mb-16">
+<section class="mx-auto mt-6 md:mt-12 max-w-screen-lg min-h-screen px-5 mb-16">
 	<h1 class="c-h2 mb-6">Cinemas de Porto Alegre</h1>
 
 	<div class="gap-5 grid grid-cols-1 justify-self-stretch md:grid-cols-2">
