--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -42,7 +42,7 @@
 			</div>
 		<% end %></div>
 	<% if @pagy %>
-		<div class="mb-10 md:mx-0 mt-3 mx-auto px-3 w-content">
+		<div class="mb-10 mt-3 px-3 w-content">
 			<%== helpers.pagy_nav(@pagy) %>
 			<div class="text-xs mt-2">
 				<%== helpers.pagy_info @pagy, 'eventos' %>
