--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -5,11 +5,6 @@
 	<div data-hero--horizontal-event-target="currentItem"
 			 class="flex justify-between transition-opacity select-none tap-highlight-none">
 		<div class="<%= helpers.class_names('pr-6 flex-1', {}) %>">
-			<div class="mb-1.5 text-xs md:text-sm text-gray-700">
-				<%= helpers.day_of_week(@event.start_time) %> · <%= helpers.format_hour @event.start_time %>h ·
-				<%= @event.categories_primary_name.titleize %> ·
-				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
-			</div>
 			<%= content_tag :a,
 											dom_id(@event, 'hero--horizontal-event__link'),
 											href:  event_path(@event),
@@ -17,9 +12,14 @@
 												action:     'click->hero--horizontal-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'c-h3' do %>
+											class: 'c-h3 inline-block leading-snug' do %>
 				<%= @event.name %>
 			<% end %>
+			<div class="mt-1.5 text-xs md:text-sm text-gray-700">
+				<%= helpers.day_of_week(@event.start_time) %> · <%= helpers.format_hour @event.start_time %>h ·
+				<%= @event&.categories_display_name&.capitalize %> ·
+				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
+			</div>
 			<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
 				<%= helpers.limit_description_size @event.description, 120 %>
 			</div>
