--- a/web/app/javascript/stylesheets/_components.scss
+++ b/web/app/javascript/stylesheets/_components.scss
@@ -4,7 +4,7 @@
   }
 
   .c-h3 {
-    @apply font-semibold leading-snug text-gray-800;
+    @apply text-sm md:text-base font-semibold leading-snug text-gray-800;
   }
 
   .c-span {
