--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -7,7 +7,7 @@
 								class: 'transition-opacity group' do %>
 	<div class="flex bg-white select-none tap-highlight-none">
 		<div>
-			<div class="relative w-24 h-16 bg-brand-100 md:h-28 md:w-48">
+			<div class="rounded md:rounded-lg relative w-24 h-16 bg-gray-100 md:h-28 md:w-48">
 				<%= link_to event_path(@event),
 										data: {
 											'turbo-preserve-scroll': true,
